// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PV Icons Icon with color 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  height: 36px;
  min-height: 36px;
  width: 36px;
}

<div
  class="c0"
>
  <svg
    aria-hidden="true"
    color="red"
    data-testid="svg-icon-copy"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.284 2.652c.732 0 1.326.594 1.326 1.327v10.61c0 .732-.593 1.326-1.326 1.326H2.326A1.326 1.326 0 0 1 1 14.589V3.979c0-.733.594-1.327 1.326-1.327zM2.326 14.59h7.958V3.979H2.326zM13.6 0c.366 0 .663.297.663.663V12.6a.663.663 0 0 1-1.326 0V1.326H4.315a.663.663 0 0 1 0-1.326z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`PV Icons Icon with default container 1`] = `
.c0 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  height: 36px;
  min-height: 36px;
  width: 36px;
}

<div
  class="c0"
>
  <svg
    aria-hidden="true"
    data-testid="svg-icon-copy"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.284 2.652c.732 0 1.326.594 1.326 1.327v10.61c0 .732-.593 1.326-1.326 1.326H2.326A1.326 1.326 0 0 1 1 14.589V3.979c0-.733.594-1.327 1.326-1.327zM2.326 14.59h7.958V3.979H2.326zM13.6 0c.366 0 .663.297.663.663V12.6a.663.663 0 0 1-1.326 0V1.326H4.315a.663.663 0 0 1 0-1.326z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`PV Icons Icon with no container 1`] = `
<svg
  aria-hidden="true"
  data-testid="svg-icon-copy"
  fill="none"
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M10.284 2.652c.732 0 1.326.594 1.326 1.327v10.61c0 .732-.593 1.326-1.326 1.326H2.326A1.326 1.326 0 0 1 1 14.589V3.979c0-.733.594-1.327 1.326-1.327zM2.326 14.59h7.958V3.979H2.326zM13.6 0c.366 0 .663.297.663.663V12.6a.663.663 0 0 1-1.326 0V1.326H4.315a.663.663 0 0 1 0-1.326z"
    fill="currentColor"
  />
</svg>
`;
